Fixed the alert close button that was sometimes overlapping with the title

--- a/src/styles/molecules/_molecules.alert.scss
+++ b/src/styles/molecules/_molecules.alert.scss
@@ -40,6 +40,10 @@
     right: 0;
     top: 0;
   }
+
+  &:has(.m-alert__close) .m-alert__title {
+    padding-right: var(--SPACER-L);
+  }
 }
 
 /**
